<!--
  ~ Copyright (c) 2017. http://hiteshsahu.com- All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ If you use or distribute this project then you MUST ADD A COPY OF LICENCE
  ~ along with the project.
  ~  Written by Hitesh Sahu <hiteshkrsahu@Gmail.com>, 2017.
  -->

<resources>

    <string name="app_name">UBS</string>
    <string name="action_settings">Settings</string>
    <string name="empty_text">Select song from below to play</string>
    <string name="standard">Standard</string>
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="idle">Idle</string>
    <string name="crash_toast_text">Oops Crashe Occurred</string>
    <string name="offer_banner">"Shop for 2000 to get Rs 100 discount and shop for 3000 to get Rs 200 discount"</string>
    <string name="checkout">CheckOut</string>
    <string name="similar_product">You may also like</string>
    <string name="slogan">Quick Delivery</string>
    <string name="email_developer_">Email Developer:</string>
    <string name="personal_website_">Personal Website :</string>
    <string name="site_hitesh">www.hiteshsahu.com</string>
    <string name="contact_number">Contact Number</string>
    <string name="mob_num">8888813275</string>
    <string name="lab_locations">Locations</string>
    <string name="pune">Pune</string>
    <string name="address_value">C 1002, Lorelle Socity Wakad Pune</string>
    <string name="title_activity_signup">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_data">The information you entered is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>